<resources>
    <string name="app_name">YourSlice</string>
    <string name="title_activity_insert_ex">InsertExActivity</string>
    <string name="test" />
    <string name="title_activity_expense_info">ExpenseInfoActivity</string>
    <string name="title_activity_balance">BalanceActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="new_expense"><b>"New expense in group</b></string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Insert Email</string>
    <string name="hint_password">Insert Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">I am already registered, Login.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="title_activity_user_info">UserInfoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Invitation related strings -->
    <string name="invitation_title">YourSlice: You are invited to join to a group!</string>
    <string name="invitation_cta">Download YourSlice</string>
    <string name="title_activity_user_information">UserInformationActivity</string>
    <string name="title_activity_pol">PolActivity</string>
    <string name="insert_email">Insert email</string>
    <string name="insert_password">Insert password</string>
    <string name="login">LOGIN</string>
    <string name="send_again_verification_email">Send Again Verification Email</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="surname">Surname</string>
    <string name="title_activity_group_statistics">GroupStatisticsActivity</string>
    <string name="stat_group">Expenses by categories</string>
    <string name="title_activity_user_statistics">UserStatisticsActivity</string>

</resources>
